<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:title="@string/parametres">

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/parametres_categories_azero"
        android:summaryOff="@string/desactive"
        android:summaryOn="@string/active"
        android:textSize="12sp"
        android:title="Masquer les Catégories à 0" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/parametres_produits_azero"
        android:summaryOff="@string/desactive"
        android:summaryOn="@string/active"
        android:textSize="12sp"
        android:title="Masquer les Produits à 0" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/parametres_activer_description"
        android:summaryOff="@string/desactive"
        android:summaryOn="@string/active"
        android:textSize="12sp"
        android:title="Activer la description du produit dans le catalogue" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/parametres_activer_synchronisation_ProduitVirtuel"
        android:summaryOff="@string/desactive"
        android:summaryOn="@string/active"
        android:textSize="12sp"
        android:title="Activer la synchronisation des produits virtuel" />
    <!--<SwitchPreference-->
        <!--android:defaultValue="false"-->
        <!--android:key="@string/parametres_activer_movement_stock_cmd"-->
        <!--android:summaryOff="@string/desactive"-->
        <!--android:summaryOn="@string/active"-->
        <!--android:textSize="12sp"-->
        <!--android:title="@string/parametres_activer_movement_stock_cmd" />-->
</PreferenceScreen>
